feat: Refine meta description and title
Update the page title and meta description to be more concise and accurately reflect the core functionality of the tool. This improves clarity for users and potentially search engine indexing.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Watch TikTok Without App – Browser-Safe TikTok Viewer</title>
-    <meta name="description" content="Paste any TikTok link and watch videos instantly in your browser. No app install, no redirects, no login required. Works on iPhone and Android.">
+    <title>Watch TikTok Without App – Open TikTok Links in Browser</title>
+    <meta name="description" content="Watch TikTok videos without downloading the app. Use this simple tool to open and view TikTok links directly in your browser, no app required.Works on iPhone and Android.">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
