--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/watchtiktokwithoutapp.png">
+    <link rel="icon" type="image/x-icon" href="/watchtiktokwithoutapp.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/watchtiktokwithoutapp.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/watchtiktokwithoutapp.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/watchtiktokwithoutapp.png">
     <style>
         body {
             font-family: 'Inter', sans-serif;
